Fix gnome shell scrollbar & change red warning color

--- a/gnome-shell/_colors.scss
+++ b/gnome-shell/_colors.scss
@@ -10,7 +10,7 @@ $primary_glow: lighten($primary, 10%);
 
 $orange: #f39c12;
 $yellow: #f3d56e;
-$red: #ff007a;
+$red: #ff003c;
 $purple: #c74ded;
 $cyan: #00e8c6;
 $lime: #84ff39;
